--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@headlessui/react": "^2.1.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
