--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "next": "14.2.5",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
